--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.20.0"
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.20.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
