--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "date-fns": "^3.0.6",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
