--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.1",
     "chart.js": "^4.4.1",
     "date-fns": "^3.0.6",
+    "dotenv": "^16.3.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
