--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install Dependencies 
-        run: npm ci
+        run: npm install
       - name: Lint
         run: npx eslint src/**/*.js
 
