--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src/**/*.jsx",
     "preview": "vite preview",
     "cypress:open": "cypress open",
-    "test:e2e": "npx cypress run"
+    "test": "npx cypress run"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
