--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -71,3 +71,7 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           command: npm test
+        env:
+          CYPRESS_api_server: ${{secrets.API_SERVER_URL}}
+          CYPRESS_test_username: ${{secrets.TEST_USERNAME}}
+          CYPRESS_test_password: ${{secrets.TEST_PASSWORD}}
