--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -53,10 +53,6 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     needs: [lint, build]
     runs-on: ubuntu-latest
-    env:
-      API_SERVER: ${{ secrets.API_SERVER }}
-      TEST_USERNAME: ${{ secrets.TEST_USERNAME }}
-      TEST_PASSWORD: ${{ secrets.TEST_PASSWORD }}
     steps: 
       - name: Checkout
         uses: actions/checkout/@v3
@@ -71,6 +67,9 @@ jobs:
         with:
           name: dist
           path: dist
+      - name: Write the cypress.env.json file
+        run: |
+          echo '${{ secrets.CYPRESS_ENV_CI }}' > cypress.env.json
       - name: E2E Test
         uses: cypress-io/github-action@v4
         with:
