--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -73,6 +73,6 @@ jobs:
           command: npm test
           env: true
         env:
-          CYPRESS_api_server: ${{secrets.API_SERVER_URL}}
-          CYPRESS_test_username: ${{secrets.TEST_USERNAME}}
-          CYPRESS_test_password: ${{secrets.TEST_PASSWORD}}
+          api_server: ${{secrets.API_SERVER_URL}}
+          test_username: ${{secrets.TEST_USERNAME}}
+          test_password: ${{secrets.TEST_PASSWORD}}
