--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -85,6 +85,10 @@ jobs:
         uses: actions/checkout/@v3
         with:
           fetch-depth: 0
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
         with:
