--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,11 +49,9 @@ jobs:
           name: dist
           path: dist
 
-
-
   deploy:
     if: ${{ github.event_name == 'push' }}
-    needs: [build]
+    needs: [test]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
@@ -77,6 +75,4 @@ jobs:
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          VITE_GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
-          VITE_API_BASE_URL: ${{ secrets.API_BASE_URL }}
         timeout-minutes: 1
