--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,7 +51,7 @@ jobs:
 
   deploy:
     if: ${{ github.event_name == 'push' }}
-    needs: [test]
+    needs: [build]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
@@ -65,7 +65,7 @@ jobs:
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.0
         with:
-          publish-dir: './dist'
+          publish-dir: dist
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "Deploy from GitHub Actions"
