--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -42,6 +42,9 @@ jobs:
           node-version: '16'
       - name: Install Dependencies 
         run: npm install
+      - name: 'Create env file'
+        run: |
+          echo "${{ secrets.ENV_FILE }}" > .env
       - name: Build Static Website
         run: npm run build
       - uses: actions/upload-artifact@v3
