--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,3 +28,70 @@ jobs:
         run: npm install
       - name: Lint
         run: npx eslint src/**/*.jsx
+
+  build:
+    if: ${{ github.event_name == 'push' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout/@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - name: Install Dependencies 
+        run: npm install
+      - name: Build Static Website
+        run: npm run build
+      - uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: dist
+
+  test:
+    needs: [lint, build]
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Checkout
+        uses: actions/checkout/@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+      - name: Install Dependencies 
+        run: npm install
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
+      - name: E2E Test
+        uses: cypress-io/github-action@v6
+        with:
+          command: npm test
+          env: true
+        env:
+          CYPRESS_api_server: ${{secrets.API_SERVER_URL}}
+          CYPRESS_test_username: ${{secrets.TEST_USERNAME}}
+          CYPRESS_test_password: ${{secrets.TEST_PASSWORD}}
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: npm install 
+      - uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v2.0
+        with:
+          publish-dir: './dist' 
+          production-branch: main  
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
