added other way to do the deploy

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,36 +49,9 @@ jobs:
           name: dist
           path: dist
 
-  test:
-    needs: [lint, build]
-    runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout
-        uses: actions/checkout/@v3
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-      - name: Install Dependencies 
-        run: npm install
-      - uses: actions/download-artifact@v3
-        with:
-          name: dist
-          path: dist
-      - name: E2E Test
-        uses: cypress-io/github-action@v6
-        with:
-          command: npm test
-          env: true
-        env:
-          CYPRESS_api_server: ${{secrets.API_SERVER_URL}}
-          CYPRESS_test_username: ${{secrets.TEST_USERNAME}}
-          CYPRESS_test_password: ${{secrets.TEST_PASSWORD}}
-
   deploy:
     if: ${{ github.event_name == 'push' }}
-    needs: [test]
+    needs: [build]
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout
